src/test/ui/parser/issue-33262.stderr
error: expected type, found `{`
  --> $DIR/issue-33262.rs:6:22
   |
LL |     for i in 0..a as { }
   |                      ^

error: aborting due to previous error

